fixed issue with dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 gymnasium~=1.0.0
-numpy~=1.26.4
-simpn~=1.2.11
+matplotlib~=3.10.0
+simpn~=1.3.0
 torch~=2.5.1
 torch-geometric~=2.6.1
+tensorboard~=2.18.0
